shipping.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
spec:
  type: NodePort
  ports:
    - port: 3001 # grep pod port
  selector:
    app: shipping # grep pod label with key `app`
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping # set deployment name
  labels:
    app: shipping
    version: v1
spec:
  selector:
    matchLabels:
      app: shipping # label to track pod, so make sure this label is fullfilled on `template.metadata.labels`
  strategy:
    type: Recreate # always re-create if there are new changes on this template
  template:
    metadata:
      labels:
        app: shipping # label to be tracked by deployment
        version: v1
    spec:
      serviceAccountName: shipping
      containers:
      - name: shipping # container prefix name
        image: ghcr.io/havus/shipping:1.0 # image container
        imagePullPolicy: IfNotPresent # will not pull image if image in minikube(cluster) is present
        ports:
          - containerPort: 3001 # export port from container
        resources:
          requests:
            cpu: 200m # cpu minimum requirement
