order-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: order-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80 # expose port 80
        name: http
        protocol: HTTP
      hosts:
        - "*" # allow from all host
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
    - "*" # from all host
  gateways:
    - order-gateway # gateway came from
  http:
    - match:
        - uri:
            exact: /order
      route:
        - destination:
            host: order # routing to order service
