virtual-service-90-10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce
spec:
  hosts:
    - "*"
  gateways:
    - ecommerce-gateway
  http:
    - route:
      - destination:
          host: order
          subset: v1
        weight: 90
      - destination:
          host: order
          subset: v2
        weight: 10
